--- a/app/templates/editora.html
+++ b/app/templates/editora.html
@@ -42,7 +42,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for editora in editora %}
+        {% for editora in editoras %}
         <tr>
           <td>{{ editora.nome }}</td>
           <td>{{ editora.site }}</td>
