--- a/app/templates/genero.html
+++ b/app/templates/genero.html
@@ -40,9 +40,9 @@
         </tr>
       </thead>
       <tbody>
-        {% for genero in genero %}
+        {% for genero in generos %}
         <tr>
-          <td>{{ genero.genero }}</td>
+          <td>{{ genero.nome }}</td>
         </tr>
         {% endfor %}
       </tbody>
