--- a/app/templates/leitor.html
+++ b/app/templates/leitor.html
@@ -42,7 +42,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for leitor in leitor %}
+        {% for leitor in leitores %}
         <tr>
           <td>{{ leitor.nome }}</td>
           <td>{{ leitor.email }}</td>
