--- a/app/templates/autor.html
+++ b/app/templates/autor.html
@@ -36,25 +36,15 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Nome</th>
-          <th scope="col">Autor</th>
-          <th scope="col">Editora</th>
-          <th scope="col">Gênero</th>
-          <th scope="col">Preço</th>
-          <th scope="col">Data Publicação</th>
-          <th scope="col">Status</th>
+          <th scope="col">Nome do Autor</th>
+          <th scope="col">Cidade do Autor</th>
         </tr>
       </thead>
       <tbody>
-        {% for livros in livros %}
+        {% for autor in autor %}
         <tr>
-          <td>{{ livros.nome }}</td>
-          <td>{{ livros.autor }}</td>
-          <td>{{ livros.editora }}</td>
-          <td>{{ livros.genero }}</td>
-          <td>{{ livros.preco }}</td>
-          <td>{{ livros.data_plub }}</td>
-          <td>{{ livros.status }}</td>
+          <td>{{ autor.nome }}</td>
+          <td>{{ autor.autor }}</td>
         </tr>
         {% endfor %}
       </tbody>
