--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
+  
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -56,6 +56,42 @@
     </div>
   </div>
 
+  <table class="table">
+    <thead>
+    <tr>
+    <th scope="col">Nome</th>
+    <th scope="col">Autor</th>
+    <th scope="col">Editora</th>
+    <th scope="col">Gênero</th>
+    <th scope="col">Preço</th>
+    <th scope="col">Data Publicação</th>
+    <th scope="col">Status</th>
+    <th scope="col">Excluir</th>
+    <th scope="col">Editar</th>
+    </tr>
+    </thead>
+    
+  <tbody>
+    {% for livro in livros %}
+    <tr>
+    <td>{{ livro.nome }}</td>
+    <td>{{ livro.autor }}</td>
+    <td>{{ livro.editora }}</td>
+    <td>
+    {% for genero in livro.genero.all %}
+    {{ genero.nome }}{% if not forloop.last %},
+    {% endif %}
+    {% endfor %}
+    </td>
+    <td>{{ livro.preco }}</td>
+    <td>{{ livro.data_plub }}</td>
+    <td>{{ livro.status }}</td>
+    <td><a href="delete/{{ livro.id }}"
+    class="btn btn-danger">Excluir</a></td>
+    </tr>
+    {% endfor %}
+    </tbody>
+  </table>
   <!-- Incluindo jQuery e Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
